--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <a href="{{ url_for('livefeed_page') }}" class="navbar-item">Live Feed</a>
             <a href="{{ url_for('recordings') }}" class="navbar-item">Recordings</a>
             <a href="{{ url_for('employee_activity') }}" class="navbar-item">Employee Activity</a>
-            <a href="{{ url_for('analytics_page') }}" class="navbar-item">📊 Analytics</a>
+            <a href="{{ url_for('analytics_page') }}" class="navbar-item">Analytics</a>
             <a href="{{ url_for('employees') }}" class="navbar-item">Employees</a>
             <a href="{{ url_for('account') }}" class="navbar-item">Account Settings</a>
             <a href="{{ url_for('about') }}" class="navbar-item">About</a>
